--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lonestar Institute of Taekwando</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/overlay.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/reset_and_variables.css">
 </head>
@@ -13,29 +14,35 @@
     <div id="nav-placeholder"></div>
 
     <main>
-        <section class="hero" aria-labelledby="hero-heading">
-            <div class="hero__media" aria-hidden="true">
-                <video class="hero__video" autoplay muted loop playsinline>
-                    <source src="video/tkd.mp4" type="video/mp4">
+        <section class="hero hero--emerald" aria-labelledby="hero-heading">
+            <div class="video-wrap">
+                <video autoplay muted loop playsinline preload="metadata" poster="img/hero-poster.jpg" aria-hidden="true">
+                    <source src="video/lsit-hero.webm" type="video/webm">
+                    <source src="video/lsit-hero.mp4" type="video/mp4">
                 </video>
-            </div>
-            <div class="hero__content">
-                <p class="hero__eyebrow">Lonestar Institute of Taekwondo</p>
-                <h1 id="hero-heading" class="hero__title">
-                    Martial Arts for<br /> the Whole Family
-                </h1>
-                <p class="hero__subtitle">
-                    Discover award-winning classes for kids, teens, and adults guided by world-class instructors dedicated to confidence, discipline, and real self-defense.
-                </p>
-                <div class="hero__actions">
-                    <a href="#free-week" class="hero__button hero__button--primary">
-                        <span class="hero__button-label">Claim Free Week</span>
-                        <i data-lucide="calendar" aria-hidden="true"></i>
-                    </a>
-                    <a href="tel:+16825548531" class="hero__button hero__button--secondary">
-                        <span class="hero__button-label">Call Now</span>
-                        <i data-lucide="arrow-right" aria-hidden="true"></i>
-                    </a>
+
+                <div class="overlay--gradient is-pulsing" aria-hidden="true"></div>
+                <div class="overlay--grain" aria-hidden="true"></div>
+                <div class="overlay--vignette" aria-hidden="true"></div>
+
+                <div class="text-glass hero__content">
+                    <p class="hero__eyebrow">Lone Star Institute of Taekwondo</p>
+                    <h1 id="hero-heading" class="hero__title">
+                        Martial Arts for the Whole Family
+                    </h1>
+                    <p class="hero__subtitle">
+                        Discover award-winning classes for kids, teens, and adults guided by world-class instructors dedicated to confidence, discipline, and real self-defense.
+                    </p>
+                    <div class="hero__actions">
+                        <a href="#free-week" class="hero__button hero__button--primary">
+                            <span class="hero__button-label">Claim Free Week</span>
+                            <i data-lucide="calendar" aria-hidden="true"></i>
+                        </a>
+                        <a href="tel:+16825548531" class="hero__button hero__button--secondary">
+                            <span class="hero__button-label">Call Today</span>
+                            <i data-lucide="phone" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
