--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <section class="hero hero--emerald" aria-labelledby="hero-heading">
             <div class="video-wrap">
                 <video autoplay muted loop playsinline preload="metadata" poster="img/hero-poster.jpg" aria-hidden="true">
-                    <source src="video/lsit-hero.webm" type="video/webm">
-                    <source src="video/lsit-hero.mp4" type="video/mp4">
+                    <source src="video/tkd.mp4" type="video/mp4">
                 </video>
 
                 <div class="overlay--gradient is-pulsing" aria-hidden="true"></div>
