nav logo linking, logo added to footer, watermark update on mobile in footer

--- a/footer.html
+++ b/footer.html
@@ -146,9 +146,10 @@
   <h2 id="footer-heading" class="visually-hidden">Lonestar Institute of Taekwando Footer</h2>
   <div class="site-footer__main">
     <div class="site-footer__column site-footer__column--brand">
-      <div class="site-footer__logo">
+      <a href="index.html" class="site-footer__logo" aria-label="Lonestar Institute of Taekwando home">
+        <img src="img/lsit_logo.svg" alt="Lonestar Institute of Taekwando logo">
         <span class="logo-text">LONE STAR<br>INSTITUTE OF<br>TAEKWANDO</span>
-      </div>
+      </a>
       <p class="site-footer__tagline">Building confident leaders through disciplined martial arts training for every age and stage.</p>
       <address class="site-footer__contact" aria-label="Contact information">
         <a href="https://maps.google.com/?q=1541+S.+Bowen+Road+Pantego+TX+76013" class="site-footer__contact-link">
