--- a/nav.html
+++ b/nav.html
@@ -33,7 +33,9 @@
 
 <!-- Mobile Navigation -->
 <nav class="mobile-nav">
-  <img src="img/lsit_logo.svg" class="logo-image logo-image--mobile" alt="Lonestar Institute of Taekwando">
+  <a href="index.html" class="logo-image logo-image--mobile" aria-label="Lonestar Institute of Taekwando home">
+    <img src="img/lsit_logo.svg" alt="Lonestar Institute of Taekwando">
+  </a>
   <button class="hamburger" type="button" aria-label="Toggle navigation" aria-expanded="false" aria-controls="mobile-menu">
     <span></span><span></span><span></span>
   </button>
