minor quote update instructors page

--- a/instructors.html
+++ b/instructors.html
@@ -84,9 +84,10 @@
               <figure class="instructor-card__media">
                 <img src="img/instructors/master_k_action1.jpg" alt="Master David Kestenbaum executing a flying side kick during a demonstration">
               </figure>
-              <figure class="instructor-card__media">
-                <img src="img/instructors/master_k_action2.jpg" alt="Master David Kestenbaum coaching students through a Taekwondo combination">
-              </figure>
+              <blockquote class="instructor-card__quote">
+                <p>“Our mission has always been simple — to build stronger people, not just stronger kicks. Taekwondo is a lifelong pursuit of balance, respect, and courage, and we’re honored to guide each student on that journey.”</p>
+                <span class="instructor-card__quote-name">- Master David Kestenbaum</span>
+              </blockquote>
             </div>
             </div>
           </article>
