fixed video playback, source changed to LSIT_BW.mp4

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="hero hero--emerald" aria-labelledby="hero-heading">
             <div class="video-wrap">
                 <video class="hero__video" autoplay muted loop playsinline webkit-playsinline preload="auto" poster="img/hero-poster.jpg" aria-hidden="true">
-                    <source src="video/tkd.mp4" type="video/mp4">
+                    <source src="video/LSIT_BW.mp4" type="video/mp4">
                 </video>
 
                 <div class="overlay--gradient is-pulsing" aria-hidden="true"></div>
