changed to red / black theme

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <video class="hero__video" autoplay muted loop playsinline webkit-playsinline preload="auto" poster="img/hero-poster.jpg" aria-hidden="true">
                     <source src="video/LSIT_BW.mp4" type="video/mp4">
                 </video>
+                <img class="hero__fallback" src="img/fallback.jpg" alt="" aria-hidden="true">
 
                 <div class="overlay--gradient is-pulsing" aria-hidden="true"></div>
                 <div class="overlay--grain" aria-hidden="true"></div>
